# retype

./: .flake8  .gitignore  .pre-commit-config.yaml  .style.yapf  .travis.yml  MANIFEST.in  README.md  azure-pipelines.yml  mypy.ini  pyproject.toml  retype.py  retype_hgext.py  setup.cfg  setup.py  tox.ini
.github/workflows/: check.yml
src/retype/: __init__.py  __main__.py  config.py  retype_hgext.py
tests/: test_discovery.py  test_entry_points.py  test_retype.py
types/: .flake8  retype.pyi  retype_hgext.pyi
types/src/retype/: __init__.pyi  __main__.pyi  config.pyi  retype_hgext.pyi  version.pyi
types/tests/: test_discovery.pyi  test_entry_points.pyi  test_retype.pyi
