[build-system]
requires = [
    'setuptools >= 44',
    'wheel >= 0.30',
    'setuptools_scm[toml]>=3.4',
]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = 'black'
known_first_party = ['retype']

[tool.setuptools_scm]
write_to = 'src/retype/version.py'
write_to_template = """
\"\"\" Version information \"\"\"

__version__ = "{version}"
"""
