[metadata]
name = retype
description = re-apply types from .pyi stub files to your codebase
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ambv/retype
author_email = lukasz@langa.pl
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
keywords = mypy typing typehints type hints pep484 pyi stubs
project_urls =
    Source=https://github.com/ambv/retype
    Tracker=https://github.com/ambv/retype/issues

[options]
packages = find:
install_requires =
    click
    pathspec>=0.5.9,<1
    typed-ast
python_requires = >=3.6
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    retype=retype.__main__:main

[options.extras_require]
testing =
    pytest>=3.0.0,<6
    pytest-cov>=2.5.1,<3

[flake8]
ignore =
    E501,
    E502,
    W503,
    E225,
    E302,
    E203,
    E741,
max-line-length = 88
max-complexity = 32
select = B,C,E,F,T4,W,B9

[coverage:run]
branch = true
parallel = true

[coverage:report]
skip_covered = True
show_missing = True

[coverage:paths]
source =
    src/retype
    .tox/*/lib/python*/site-packages/retype
    .tox/pypy*/site-packages/retype
    .tox\*\Lib\site-packages\retype
    */src/retype
    *\src\retype
