[metadata]
name = retype
description = re-apply types from .pyi stub files to your codebase
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ambv/retype
author_email = lukasz@langa.pl
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
keywords = mypy typing typehints type hints pep484 pyi stubs
project_urls =
    Source=https://github.com/ambv/retype
    Tracker=https://github.com/ambv/retype/issues

[options]
packages = find:
install_requires =
    click>=7
    pathspec>=0.5.9,<1
    typed-ast>=1.3
python_requires = >=3.7
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    retype=retype.__main__:main

[options.extras_require]
test =
    covdefaults>=2
    pytest>=6
    pytest-cov>=3

[flake8]
ignore =
    E501,
    E502,
    W503,
    E225,
    E302,
    E203,
    E800,
    E741,
max-line-length = 88
max-complexity = 32
select = B,C,E,F,T4,W,B9
noqa-require-code = true

[coverage:run]
plugins = covdefaults
parallel = true

[coverage:paths]
src =
    src
    .tox/*/lib/python*/site-packages
    .tox/pypy*/site-packages
    .tox\*\Lib\site-packages\
    */src
    *\src
other =
    .
    */retype
    *\retype

[coverage:report]
fail_under = 88

[coverage:html]
show_contexts = true
skip_covered = false

[coverage:covdefaults]
subtract_omit = */.tox/*
